--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,14 @@
 # https://console.xfyun.cn/services/tts
 # 查看自己的应用密钥
 APPID: # xxxxxxx
-APIKey: # xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# 看清楚, 千万别和APIKey搞反了, 不然会报错 401 Unauthorization
 APISecret: # xxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
+APIKey: # xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 # 文本文件路径
-text_path: ./inputs/text_short.txt
+text_path: # ./inputs/text_short.txt
 
 # 长度限制，默认2000，如果超过，就自动拼接
 text_limit: 2000
@@ -15,7 +18,7 @@ text_limit: 2000
 speed: 80  # 0-100
 
 # 播音员
-voice_name: "x2_pengfei"  # "x2_chaoge"
+voice_name: xiaoyan # "x2_pengfei"  # "x2_chaoge"
 
 # 句子间换气间隔ms
 sentence_sep_iter: 1000
